# tmp

ur5e_mics/: README.md  ur5e_mics_base.repos
ur5e_mics/ur5e_mics_bringup/: CMakeLists.txt  package.xml
ur5e_mics/ur5e_mics_bringup/config/: common_bringup.yaml  control.rviz
ur5e_mics/ur5e_mics_bringup/launch/: fake_control.launch  fake_start.launch  moveit.launch  real_start.launch  robot_control.launch  start.launch  ur_bringup_real.launch
ur5e_mics/ur5e_mics_bringup/src/: node.cpp
ur5e_mics/ur5e_mics_configurations/: CMakeLists.txt  package.xml
ur5e_mics/ur5e_mics_configurations/config/: controllers_configurations.yaml  fake_ur5e_hw.yaml  log.yaml  planner_controllers.yaml  planner_hw.yaml  ur5e_controllers.yaml  ur5e_hw.yaml
ur5e_mics/ur5e_mics_configurations/launch/: control.rviz  fake_start.launch  log.launch  moveit.launch  real_start.launch  robot_control.launch  rviz.launch  start.launch  urscript.launch
ur5e_mics/ur5e_mics_description/: CMakeLists.txt  package.xml
ur5e_mics/ur5e_mics_description/config/: rviz.rviz  ur5e_calib.yaml
ur5e_mics/ur5e_mics_description/launch/: load_ur5e_mics_complete.launch  test.launch  upload.launch
ur5e_mics/ur5e_mics_description/urdf/: fixed_parts.xacro  ur5e_mics_complete.xacro  ur5e_mics_w_gripper.xacro  virtual_walls.xacro
ur5e_mics/ur5e_mics_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_mics/ur5e_mics_moveit_config/config/: cnr_ros_controllers.yaml  dirrt_planning.yaml  fake_controllers.yaml  gazebo_ur5e_mics_complete.urdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5e_mics_complete.srdf
ur5e_mics/ur5e_mics_moveit_config/launch/: chomp_planning_pipeline.launch.xml  cnr_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  dirrt_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
ur5e_mics/ur5e_mics_perception/: CMakeLists.txt  package.xml
ur5e_mics/ur5e_mics_perception/launch/: centroid.launch  obstacle.launch  realsense.launch  vision.launch
ur5e_mics/ur5e_mics_safety/: CMakeLists.txt  README.md  package.xml
ur5e_mics/ur5e_mics_safety/config/: fixed_areas.yaml  thor_safety.yaml  thor_safety_mediapipe.yaml
ur5e_mics/ur5e_mics_safety/launch/: safety.launch  safety_dynamic.launch  safety_fixed_area.launch  safety_mediapipe.launch
