<?xml version="1.0"?>
<package format="2">
  <name>ur5e_mics_bringup</name>
  <version>0.0.0</version>
  <description>The ur5e_mics_bringup package</description>

  <maintainer email="marco.faroni@polimi.it">Marco Faroni</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_msgs</depend>

  <export>
  </export>
</package>
