<?xml version="1.0"?>
<package format="2">
  <name>ur5e_mics_configurations</name>
  <version>0.0.0</version>
  <description>The ur5e_mics_configurations package</description>
  <maintainer email="marco.faroni@polimi.it">Marco Faroni</maintainer>
  <license>BSD3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
