<?xml version="1.0"?>
<package format="2">
  <name>ur5e_mics_description</name>
  <version>0.0.0</version>
  <description>The ur5e_mics_description package</description>

  <maintainer email="marco.faroni@polimi.it">Marco Faroni</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>ur_description</build_export_depend>
  <exec_depend>ur_description</exec_depend>
  <!--<exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>-->
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>agni_tf_tools</exec_depend>

  <export>
  </export>
</package>
